# trustiNES

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-resources.txt
resources/: opcodes.csv
src/: bin.rs  lib.rs  logger.rs  main.rs  memory.rs  rom_loader.rs
src/cpu/: common_defs.rs  cpu_executor.rs  cpu_state.rs  executor.rs  mod.rs  opcode.rs  state.rs
src/cpu/common_defs/: address_mode.rs  mod.rs  opcode_class.rs
tests/: lib.rs
windowsBuildBats/: BuildAndRunExe.bat  BuildAndRunTests.bat  BuildLib.bat  Clean.bat
