[package]
name = "trustines"
version = "0.0.1"
authors = ["ReconditePhreak <trustiNES@MichaelReiland.net>", "Metroids <Metroids@users.noreply.github.com>", "Nesis <llnesisll@gmail.com>", "SeraphLance <kbalbas@gmail.com>"]

[features]
# no features by default
default = []

[dependencies]
byteorder = "*"
csv = "*"

[lib]
name = "trustines"
path = "src/lib.rs"

[[bin]]
name = "trustines"
path = "src/bin.rs"

